Portfolio: Initial commit.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,109 @@
-Hello, world!
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Rob Mooney: Design + Code</title>
+	<link href="style.css" rel="stylesheet">
+</head>
+<body>
+
+<header>
+
+<h1>Rob Mooney</h1>
+<h2><span>Design + Code</span></h2>
+
+</header>
+
+<section class="intro">
+
+<div class="text">
+<p>Rob Mooney is an app designer and developer based in London.</p>
+
+<p>With over 12 years of experience designing and developing iOS apps, he is as happy coding in Xcode as designing UIs in Sketch.</p>
+
+<p>Here are some of the apps he's designed and developed over the years.</p>
+</div>
+
+</section>
+
+<section class="app">
+
+<figure class="screenshots fitr">
+</figure>
+
+<div class="text description">
+<h3>Fitr Woman</h3>
+
+<p>Fitr Woman allows women athletes to get better training results by offering training and nutrition advice based around the menstrual cycle. The app features a completely custom UI and illustrations.</p>
+
+<div class="reception">
+<p>😍</p>
+<p>Featured in <em>New Apps we Love</em> on the UK and Ireland App Store</p>
+</div>
+
+</div>
+
+</section>
+
+<section class="app">
+
+<figure class="screenshots national">
+</figure>
+
+<div class="text description">
+<h3>National Express</h3>
+
+<p>National Express is the official companion app for the national bus service in the UK. It features timetables, realtime GPS bus info ticket purchasing and more.</p>
+</div>
+
+</section>
+
+<section class="app">
+
+<figure class="screenshots tv">
+</figure>
+
+<div class="text description">
+<h3>TV Guide</h3>
+
+<p>Entertainment.ie TV Guide is a dedicated app for viewing the website’s popular TV listings. It includes show reminders and Twitter integration.</p>
+
+<div class="reception">
+<p>🥇</p>
+<p>Went to No. 1 on the Irish App Store</p>
+</div>
+
+</div>
+
+</section>
+
+<section class="app">
+
+<figure class="screenshots ei">
+</figure>
+
+<div class="text description">
+<h3>Entertainment.ie</h3>
+
+<p>Entertainment.ie let people quickly browse Irish entertainment listings on an iPhone. It featured a custom UI while maintaining the iOS look and feel of the time.</p>
+
+<div class="reception">
+<p>🥇</p>
+<p>Went to No. 1 on the Irish App Store</p>
+</div>
+
+</div>
+
+</section>
+
+<footer>
+<ul>
+	<li><a href="https://github.com/robmooney">Github</a></li>
+	<li><a href="https://www.linkedin.com/in/rob-mooney-32473a146">Linkedin</a></li>
+	<li><a href="https://twitter.com/robertmooney">Twitter</a></li>
+</ul>
+</footer>
+
+</body>
+</html>
